RESOLVED FIXED68713
Node propagation doesn't handle PutScopedVar
https://bugs.webkit.org/show_bug.cgi?id=68713
Summary Node propagation doesn't handle PutScopedVar
Oliver Hunt
Reported 2011-09-23 12:14:14 PDT
Node propagation doesn't handle PutScopedVar
Attachments
Patch (1.25 KB, patch)
2011-09-23 12:15 PDT, Oliver Hunt
sam: review+
Oliver Hunt
Comment 1 2011-09-23 12:15:08 PDT
Oliver Hunt
Comment 2 2011-09-23 12:18:58 PDT
Note You need to log in before you can comment on or make changes to this bug.