Node propagation doesn't handle PutScopedVar https://bugs.webkit.org/show_bug.cgi?id=68713

Reviewed by Sam Weinig.

This was causing assertion failures.

* dfg/DFGPropagator.cpp:
(JSC::DFG::Propagator::propagateNodePredictions):

Canonical link: https://commits.webkit.org/84667@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95846 268f45cc-cd09-0410-ab3c-d52691b4dbfc